@@ -1,3 +1,9 @@
+Fri Jun 20 09:13:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/Event/EC_Lifetime_Utils_T.{h,i}:
+          Changed template type name to T and make sure that declaration
+          and implementation use the same.
+
 Fri Jun 20 07:40:11 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/Event/EC_Filter.cpp:
